# Olga-automation

./: .env.example  .gitignore  .mcp.json.example  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  WORKFLOW.md  pyproject.toml  requirements.txt
.claude/agents/: olga-analyst.md  olga-creator.md  olga-parser.md  olga-runner.md
.claude/skills/olga/: SKILL.md
.github/workflows/: ci.yml
examples/: 01_parse_opi.py  02_modify_keyword.py  03_parse_trend.py  README.md  agent_workflow.md  sample.opi  sample.tpl
src/olga_automation/: __init__.py  config.py  exceptions.py
src/olga_automation/cli/: __main__.py  app.py
src/olga_automation/execution_manager/: __init__.py  batch.py  environment.py  models.py  queue_manager.py  run_tracker.py  runner.py
src/olga_automation/mcp_server/: __init__.py  serialization.py  server.py  tools_batch.py  tools_execution.py  tools_model.py  tools_modify.py
src/olga_automation/opi_parser/: __init__.py  keyword_defaults.py  models.py  output_config.py  reader.py  validator.py  writer.py  xml_navigator.py
src/olga_automation/output_parser/: __init__.py  exporters.py  extractors.py  models.py  out_parser.py  ppl_parser.py  tpl_parser.py
tests/: conftest.py  test_tpl_parser.py  test_validator.py
