[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olga-automation"
version = "0.1.0"
description = "Python backend library + MCP server for OLGA simulation automation"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0,<2.0",
    "pydantic>=2.0",
    "numpy>=1.24",
    "lxml>=5.0",
    "typer>=0.12",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
